--- a/app/src/main/res/layout/fragment_password_set.xml
+++ b/app/src/main/res/layout/fragment_password_set.xml
@@ -5,10 +5,35 @@
     android:layout_height="match_parent"
     tools:context=".fragments.PasswordSet">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="150dp"
+        android:orientation="vertical">
+
+        <EditText
+            android:id="@+id/passwordSet"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="New Password"
+            android:inputType="textPassword" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="ChangePassword"
+            android:text="Confirm" />
+
+        <TextView
+            android:id="@+id/passwordChangedMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Password Changed"
+            android:textSize="14sp"
+            android:visibility="invisible" />
+    </LinearLayout>
 
 </FrameLayout>
