--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,12 @@
                 android:layout_height="wrap_content"
                 android:text="Payment Summary" />
 
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/individualPayments"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Individual Payments" />
+
         </com.google.android.material.tabs.TabLayout>
 
         <com.google.android.material.tabs.TabLayout
