--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="200dp"
         android:layout_weight="0"
         android:ems="10"
-        android:hint="User"
+        android:hint="Email"
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="false"
         android:singleLine="false" />
