--- a/app/src/main/res/layout/fragment_individual_payments.xml
+++ b/app/src/main/res/layout/fragment_individual_payments.xml
@@ -23,7 +23,7 @@
         android:layout_marginLeft="100dp"
         android:layout_marginTop="70dp"
         android:onClick="getPayments"
-        android:text="Button" />
+        android:text="Search" />
 
     <TextView
         android:id="@+id/flatErrorMessage"
